# BoT-SORT

./: LICENSE.txt  README.md  setup.cfg
src/bot_sort/: __init__.py  basetrack.py  bot_sort.py  gmc.py  kalman_filter.py  matching.py  s_track.py
src/bot_sort/reid/: __init__.py  fast_reid_interface.py
tests/: conftest.py  test_tracker.py
