[metadata]
name = BoT-SORT
version = attr: bot_sort.__version__
url = https://github.com/natsunoyuki/BoT-SORT/
author = "NirAharon, Natsunoyuki AI Laboratory"
keywords = 'BoT-SORT', 'MOT', 'object tracking'
description = BoT-SORT: Robust Associations Multi-Pedestrian Tracking.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Computer Vision :: MOT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    scipy
    matplotlib
    opencv-python
    lapx
    cython_bbox

[options.extras_require]
test = 
    pytest
    PyYAML
# fast_reid = fast_reid_package

[options.packages.find]
where = src
